--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SVM \n",
+    "# SVM\n",
+    "\n",
     "# Content\n"
    ]
   },
@@ -14,33 +15,56 @@
    "source": [
     "**1. Introduction**\n",
     "\n",
-    "**2. A brief explanation of the dataset**\n",
+    "**2. Data Dictionary**\n",
     "\n",
-    "**3. Data Dictionary**\n",
+    "**3. Data Analysis**\n",
     "\n",
-    "**4. Data Analysis**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4.1 Import Libraries\n",
     "\n",
-    "4.2 Import Dataset\n",
+    "- 3.1 Categorical Features\n",
     "\n",
-    "4.3 Data Description\n",
+    "  - Gender\n",
+    "  - CALC (Alcohol Consumption)\n",
+    "  - FAVC (High Caloric Food)\n",
+    "  - SCC (Calorie Monitoring)\n",
+    "  - SMOKE\n",
+    "  - Family History with Overweight\n",
+    "  - CAEC (Food Between Meals)\n",
+    "  - MTRANS (Transportation)\n",
     "\n",
-    "4.4 Vizualization\n",
+    "- 3.2 Continuous Features\n",
+    "  - Age\n",
+    "  - Height\n",
+    "  - Weight\n",
+    "  - FCVC (Vegetable Consumption)\n",
+    "  - NCP (Number of Main Meals)\n",
+    "  - CH2O (Water Consumption)\n",
+    "  - FAF (Physical Activity Frequency)\n",
+    "  - TUE (Technology Use)\n",
     "\n",
-    "4.5 Classifier Models (LogisticRegression, KNN, Decision Tree, Random Forest, SVM)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A brief explanation of the dataset\n"
+    "**4. Feature Engineering**\n",
+    "\n",
+    "- Manual Feature Encoding\n",
+    "- Data Preprocessing\n",
+    "\n",
+    "**5. Machine Learning Models**\n",
+    "\n",
+    "- 5.1 Logistic Regression\n",
+    "- 5.2 K-Nearest Neighbors (KNN)\n",
+    "- 5.3 Decision Tree\n",
+    "- 5.4 Random Forest\n",
+    "- 5.5 Support Vector Machine (SVM)\n",
+    "\n",
+    "**6. SVM K-Fold Cross-Validation**\n",
+    "\n",
+    "- 6.1 Testing Multiple Kernels (Linear, RBF, Polynomial, Sigmoid)\n",
+    "- 6.2 K-Fold CV Results\n",
+    "- 6.3 Comparison: K-Fold vs Train/Test Split\n",
+    "\n",
+    "**7. Results and Analysis**\n",
+    "\n",
+    "- Model Comparison\n",
+    "- Best Configuration\n",
+    "- Export Results (CSV)\n"
    ]
   },
   {
@@ -92,7 +116,7 @@
     "# Table 1: Questions of the survey\n",
     "\n",
     "| **Questions**                                                                                                   | **Possible Answers**                                                 | **Type**    |\n",
-    "| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- | ----------- | ------ |\n",
+    "| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- | ----------- | \n",
     "| What is your gender?                                                                                            | Female, Male                                                         | Categorical |\n",
     "| What is your age?                                                                                               | From 14 years old to 61 or more                                      | Continuous  |\n",
     "| What is your height?                                                                                            | From 1.45 Mts to 1.98 Mts                                            | Continuous  |\n",
@@ -2207,12 +2231,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export results to CSV"
+    "# Export results to CSV\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2258,7 +2282,7 @@
     "print(\"-\"*90)\n",
     "print(df_evaluation1_sorted[['kernel', 'penalty', 'acc', 'score']].head(\n",
     "    10).to_string(index=False))\n",
-    "print(\"-\"*90)  \n",
+    "print(\"-\"*90)\n",
     "\n",
     "print(\"📈 STATISTICAL SUMMARY BY KERNEL\".center(90))\n",
     "print(\"-\"*90)\n",
@@ -2267,7 +2291,7 @@
     "stats.columns = ['Mean', 'Std', 'Min', 'Max', 'N° Exps']\n",
     "print(stats.to_string())\n",
     "print(\"Results saved as 'svm_results_full.csv'\")\n",
-    "print(\"Best configurations by kernel saved as 'svm_results_best_by_kernel.csv'\") "
+    "print(\"Best configurations by kernel saved as 'svm_results_best_by_kernel.csv'\")"
    ]
   },
   {
@@ -2378,12 +2402,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluation of SVM using K-Fold Cross-Validation"
+    "# Evaluation of SVM using K-Fold Cross-Validation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2545,6 +2569,7 @@
     "\n",
     "    return results\n",
     "\n",
+    "\n",
     "print(\"kfold_svm_evaluation() defined correctly\")"
    ]
   },
@@ -2559,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2728,7 +2753,7 @@
     "X = dataset.data.features\n",
     "y = dataset.data.targets\n",
     "\n",
-    "experiments_log = [] \n",
+    "experiments_log = []\n",
     "kernels = ['linear', 'rbf', 'poly', 'sigmoid']\n",
     "\n",
     "for kernel in kernels:\n",
@@ -2737,12 +2762,12 @@
     "    print(f\"{'-'*70}\\n\")\n",
     "\n",
     "    results = kfold_svm_evaluation(\n",
-    "        X=x,  \n",
+    "        X=x,\n",
     "        y=y.values.ravel(),  # Convert y to 1D array\n",
     "        kernel=kernel,\n",
     "        C=1.0,\n",
     "        gamma='scale',\n",
-    "        degree=3,  \n",
+    "        degree=3,\n",
     "        n_folds=10,\n",
     "        random_state=42\n",
     "    )\n",
@@ -2770,7 +2795,7 @@
     "print(\"SUMMARY\")\n",
     "print(\"-\"*90)\n",
     "print(df_experiments.to_string(index=False))\n",
-    "print(\"-\"*90) \n",
+    "print(\"-\"*90)\n",
     "\n",
     "best_exp = df_experiments.loc[df_experiments['mean_accuracy'].idxmax()]\n",
     "print(f\"\\n BEST KERNEL: {best_exp['kernel'].upper()}\")\n",
